Run process in ConsoleLineExecutor in correct folder and integrate it with Spring.